# scrabbleScoreboard

./: .gitignore  .todo  CHANGELOG.md  README.md  config.py  pyproject.toml  scrabblescoreboard.py  tox.ini
.github/workflows/: python-app.yml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.j2  index.j2  login.j2
app/tests/: test_models.py
migrations/versions/: 161fba619cd0_initial_migration_word_game_player_play_.py  2678b899aee4_initial_migration.py  740b5c132f6d_added_game_player_relationship.py  805cf14e0c96_added_avatar_column.py  dffa6c03ee4e_changed_language_model.py  e683874cab38_initial_migration.py
scrabbleCounter/: databse.py
scrabbleScoreboard/: app.py  cli.py  config.py  extensions.py  manage.py
scrabbleScoreboard/admin/: __init__.py  views.py
scrabbleScoreboard/api/: __init__.py  views.py
scrabbleScoreboard/api/resources/: __init__.py  game.py  play.py  player.py  word.py
scrabbleScoreboard/api/resources/docs/: player_list_get.yml
scrabbleScoreboard/api/schemas/: __init__.py  game.py  language.py  play.py  player.py  word.py
scrabbleScoreboard/auth/: __init__.py  helpers.py  views.py
scrabbleScoreboard/auth/docs/: login.yml  refresh.yml
scrabbleScoreboard/commons/: pagination.py
scrabbleScoreboard/docs/: schemas.yml
scrabbleScoreboard/docs/auth/: login.yml  refresh.yml  revoke_access_token.yml  revoke_refresh.yml
scrabbleScoreboard/forms/: __init__.py  login.py  new_game.py  new_play.py
scrabbleScoreboard/models/: __init__.py  admin.py  blacklist.py  game.py  language.py  play.py  player.py  word.py
scrabbleScoreboard/routes/: __init__.py  finish.py  game.py  home.py  login.py  views.py
scrabbleScoreboard/static/: package-lock.json  package.json  tailwind.config.js
scrabbleScoreboard/static/json/: ISO-639-1-language.json
scrabbleScoreboard/static/public/: stylesheet.css
scrabbleScoreboard/static/src/: avatar.js  game.js  stylesheet.css
scrabbleScoreboard/templates/: base.j2  game.j2  index.j2  menu.j2
scrabbleScoreboard/templates/admin/: index.html  master_admin.html
scrabbleScoreboard/utils/: cache.py  pagination.py  swagger.py
tests/: conftest.py  factories.py  test_auth.py  test_game.py  test_models.py  test_play.py  test_player.py  test_resources.py  test_word.py
(+18 files in other folders)
