[tool.poetry]
name = "scrabble-scoreboard"
version = "0.1.0-alpha"
description = "Scrabble scoreboard, analytics and utilities"
authors = ["Andrea Rondón <andrea.estefania.rv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
Flask-WTF = "^0.14.3"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
