[tool.poetry]
name = "scrabble-scoreboard"
version = "0.1.0-alpha"
description = "Scrabble scoreboard, analytics and utilities"
authors = ["Andrea Rondón <andrea.estefania.rv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
Flask-WTF = "^0.14.3"
Flask-Migrate = "^2.5.3"
Flask-JWT-Extended = "^3.25.0"
python-dotenv = "^0.15.0"
setuptools = "^51.1.2"
flasgger = "^0.9.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests = "^2.25.1"
httpie = "^2.3.0"
tox = "^3.21.2"
pytest-factoryboy = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
